# AST-Grid

./: .gitignore  CMakeLists.txt  README.md
example/ast_smoke_2d/: CMakeLists.txt  main.cpp
example/octree_smoke_3d/: CMakeLists.txt  main.cpp
include/: advection.h  args_parsing.h  ast_advection.h  ast_constant.h  ast_face_grid.h  ast_general.h  ast_grid.h  ast_grid_layout.h  ast_grid_pool.h  ast_iterator.h  ast_solver.h  ast_util.h  atomic_counter.h  base_octree_grid.h  base_octree_omni_grid.h  bitmap.h  bitmap_cell_centered_grid3.h  box_iterator.h  cell_centered_grid.h  constants.h  edge_centered_grid.h  face_centered_grid.h  general.h  global_benchmark.h  grid.h  macro.h  narrowband_levelset.h  octree_cell_centered_grid3.h  octree_face_centered_grid3.h  octree_grid_layout3.h  octree_grid_single_layout3.h  octree_layer.h  octree_layer3.h  octree_omni_boundary_solver3.h  octree_omni_face_centered_grid3.h  octree_omni_grid3.h  octree_omni_grid_layout.h  octree_omni_tilt_grid3.h  octree_omnigrid_solver3.h  octree_util.h  (+9 more)
include/geometry/: bounding_box3.h  bvh3.h  collider2.h  collider2set.h  collider3.h  cylinder3.h  implicit_surface2.h  implicit_surface2set.h  implicit_surface3.h  implicit_surface3set.h  intersection_query_engine3.h  nearest_neighbor_query_engine3.h  quaternion.h  ray2.h  ray3.h  rectangle2.h  rectangle3.h  rigid_body_collider2.h  rigid_body_collider3.h  shape.h  shape2set.h  shape_to_implicit2.h  shape_to_implicit3.h  sphere2.h  sphere3.h  transform2.h  transform3.h  triangle3.h  triangle_mesh3.h  triangle_mesh_to_sdf.h
include/jet/: fmm_levelset_solver2.h  fmm_levelset_solver3.h  marching_cubes.h  marching_cubes_table.h  marching_squares_table.h
include/pcgsolver/: blas_wrapper.h  pcg_solver.h  sparse_matrix.h  util.h
include/viewer/: grid_dump.h  image_dump.h
python/: ast_smoke_2d.ipynb  image_viewer.py
python_bindings/: CMakeLists.txt  ast_solver.cc
src/: CMakeLists.txt  constants.cpp  global_benchmark.cpp  narrowband_levelset.cpp  octree_cell_centered_grid3.cpp  octree_face_centered_grid3.cpp  octree_grid_layout3.cpp  octree_layer3.cpp  octree_omni_face_centered_grid3.cpp  octree_omni_grid3.cpp  octree_omnigrid_solver3.cpp  octree_util.cpp  octree_vertex_centered_grid3.cpp  omni_boundary_solver3.cpp  solver.cpp  timer.cpp  util.cpp
src/geometry/: CMakeLists.txt  bounding_box3.cpp  cylinder3.cpp  implicit_surface2set.cpp  quaternion.cpp  rectangle2.cpp  rectangle3.cpp  rigid_body_collider2.cpp  rigid_body_collider3.cpp  shape.cpp  shape2set.cpp  shape_to_implicit2.cpp  sphere2.cpp  sphere3.cpp  triangle3.cpp  triangle_mesh3.cpp  triangle_mesh_to_sdf.cpp
src/jet/: fmm_levelset_solver2.cpp  fmm_levelset_solver3.cpp  marching_cubes.cpp
src/viewer/: grid_dump.cpp  image_dump.cpp
